--- a/index.html
+++ b/index.html
@@ -3,64 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>my first website</title>
 </head>
 <body>
-
-
-  <p>Banh Mi</p>
-  <p>Grilled Cheese</p>
-  <p>Baba Ghanoush</p>
-  <p>Tomato soup</p>
-  <p>Cheese and crackers</p>
-  <p>Sushi</p><ul>
-    <li>Banh Mi</li>
-    <li>Grilled Cheese</li>
-    <li>Baba Ghanoush</li>
-    <li>Tomato soup</li>
-    <li>Za’atar Bread</li>
-    <li>Sushi</li>
-  </ul>
-  <ul>
-    <li>
-      Sandwiches
-      <ul>
-        <li>Banh Mi</li>
-        <li>Grilled Cheese</li>
-      </ul>
-    </li>
-    <li>
-      Snacks
-      <ul>
-        <li>Baba Ghanoush</li>
-        <li>Za’atar Bread</li>
-      </ul>
-    </li>
-    <li>
-      Soups
-      <ul>
-        <li>Tomato soup</li>
-      </ul>
-    </li>
-    <li>
-      Sushi
-      <ul>
-        <li>Sashimi</li>
-        <li>Uramaki</li>
-      </ul>
-    </li>
-  </ul>
-  <h3>Top 5 Favorite Foods</h3>
-<ol>
-  <li>Grilled Cheese</li>
-  <li>Sushi</li>
-  <li>Banh Mi</li>
-  <li>Tomato soup</li>
-  <li>Baba Ghanoush</li>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum laborum commodi rem animi ad enim, consectetur necessitatibus recusandae error dolorem officia, modi aperiam dolore illo quia? Officiis labore ipsam est illo. Doloremque ut architecto iure blanditiis numquam necessitatibus ducimus asperiores enim aut? Dicta iusto eligendi tempora fugiat eos inventore, veritatis quae debitis aspernatur rem ipsum, delectus animi! Ducimus odit enim debitis tenetur saepe possimus maxime magni repellat veniam ipsum distinctio, a alias excepturi. Amet, vitae mollitia sequi ab eveniet voluptatibus ipsam iusto fuga assumenda, autem molestias enim. Facilis accusantium quia ea numquam sequi dolor explicabo reiciendis quas aliquid culpa nostrum, maxime sit sint autem animi accusamus error? Impedit a accusantium ex illo sequi quis harum ipsa modi repellat maxime et natus, reprehenderit beatae iure tempora nemo recusandae id. Esse aliquid, rem enim illum, commodi architecto dignissimos quibusdam placeat dicta quod molestiae dolores dolorem quaerat at neque ut illo sunt quisquam iusto ipsa consequuntur ipsum veritatis corrupti ipsam. Facilis deserunt, rem itaque exercitationem nostrum doloremque numquam veniam aspernatur perferendis optio? Id vitae ullam nihil libero mollitia excepturi autem? Temporibus, ut! Maxime nisi earum velit ea vel repudiandae tenetur nam eius est, consequuntur ut dolorum fugiat voluptatum sint quis repellat ratione molestiae! Consequatur suscipit sunt nesciunt totam eius sed fuga ex reprehenderit, deleniti temporibus accusantium numquam ut quaerat. Numquam, laborum quam quaerat in eos blanditiis asperiores velit? Animi sequi modi hic earum maxime laborum praesentium sit tempora totam molestiae corrupti, fugit doloremque delectus libero ratione illo? Amet hic maxime nulla nemo ipsa sequi obcaecati expedita, quam voluptatibus itaque delectus. Obcaecati blanditiis maxime maiores cupiditate perferendis saepe quo, sed nostrum magni eos soluta voluptatum ipsa voluptas aliquid. Molestias molestiae ipsam perferendis illo, aliquam ipsum excepturi quae ducimus, facere nihil pariatur corrupti deleniti porro ab nesciunt vel voluptatum repudiandae odio unde iure cumque error?</p>
+ <img src="/index.html" alt=""> 
+ <ol> 
+ <li>garat</li>
+ <li>abdirahman</li>
+ <li>hani</li>
+ <li>farhan</li>
 </ol>
-
-
-
-    
+<ul>
+    <li>yussuf</li>
+    <li>muzamil</li>
+    <li>teyga</li>
+</ul>
+<img src="" alt="">
 </body>
 </html>
